--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div id="root"></div>
-    <script src="" type="module"></script>
-    <script type="module" src=""></script>
+    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
