--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
     
     <div id="root"></div>
-    <a href="consumer.html" class="blockchain-button">Consumer Page</a>
+    <a href="./consumer.html" class="blockchain-button">Consumer Page</a>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
